--- a/3b_Python_Logistic_Regression.ipynb
+++ b/3b_Python_Logistic_Regression.ipynb
@@ -36,7 +36,13 @@
     "  - Two predictors (no interaction)\n",
     "  - Two predictors (with interaction)\n",
     "\n",
-    "2. Logistic regression with `bambi`\n",
+    "2. Aggregated binomial regression with `statsmodels`\n",
+    "\n",
+    "3. Poisson regression with `statsmodels`\n",
+    "\n",
+    "4. Negative binomial (gamma-Poisson) regression with `statsmodels`\n",
+    "\n",
+    "5. Logistic regression with `bambi`\n",
     "\n",
     "  - A single predictor\n",
     "  - A continuous predictor\n",
