--- a/4a_Python_ML_Classification.ipynb
+++ b/4a_Python_ML_Classification.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A common task in computational research is to classify an object based on a set of features. In supervised machine learning, we can give an algorithm a dataset of training examples that say \"here are specific features, and this is the target class it belongs to\". With enough training examples, a model can be built that recognizes important features in determining an objects class. This model can then be used to predict the class of an object given its known features."
+    "A common task in computational research is to classify an object based on a set of features.  In supervised machine learning, we can give an algorithm a dataset of training examples with specific features and a categorical target.  With enough training examples, a model can recognize important features in determining an object's target class. This model can then be used to predict the class of a new object, given its known features."
    ]
   },
   {
