--- a/4b_Python_ML_Regression.ipynb
+++ b/4b_Python_ML_Regression.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whereas with classification we use a set of features (or independent variables) to predict a discrete target (dependent variable), in regression we are trying to predict a continuous output (e.g. a real valued number)."
+    "Whereas with classification we use a set of features (or independent variables) to predict a discrete target (aka dependent variable), in regression we are trying to predict a continuous target (i.e. a real valued number)."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "# 1) Loading and Preprocessing\n",
     "\n",
-    "For this regression tutorial we will use a dataset from UCI's machine learning repository ([link](http://archive.ics.uci.edu/ml/datasets/heart+disease)) containing medical information about heart disease patients. While it's primary use was in predicting heart attacks, we'll use the information to predict the age of each patient. "
+    "For this regression tutorial we will use a dataset from UCI's machine learning repository ([link](http://archive.ics.uci.edu/ml/datasets/heart+disease)) containing medical information about heart disease patients.  While it was primarily used to predict heart attacks, we will use the predictor variables (aka features) to predict the age of each patient. "
    ]
   },
   {
