--- a/4d_Python_ML_Cross_Validation.ipynb
+++ b/4d_Python_ML_Cross_Validation.ipynb
@@ -1824,24 +1824,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_parameters, values, experiment, model = optimize(\n",
-    "    parameters=[\n",
-    "        {\"name\": \"average\",  \"type\": \"choice\", \"value_type\": \"bool\", \n",
-    "         \"values\": [True, False], \"is_ordered\": False},\n",
-    "        {\"name\": \"l1_ratio\", \"type\": \"range\", \"bounds\": [1e-6, 1.0]},\n",
-    "        {\"name\": \"alpha\",    \"type\": \"range\", \"bounds\": [1e-6, 1.0]},\n",
-    "    ],\n",
-    "    evaluation_function=sgdc_evaluation_function,\n",
-    "    objective_name='accuracy',\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "exp = Experiment(\n",
     "    search_space=sgdc_search_space,\n",
     "    evaluation_function=sgdc_evaluation_function,\n",
@@ -3063,7 +3045,7 @@
     "    ChoiceParameter,\n",
     "    RangeParameter,\n",
     "    SearchSpace,\n",
-    "    SimpleExperiment,\n",
+    "    Experiment,\n",
     "    modelbridge,\n",
     "    models,\n",
     ")\n",
