--- a/4f_Python_ML_California_Housing.ipynb
+++ b/4f_Python_ML_California_Housing.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        " '7: Longitude']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {
       "image/png": {
        "width": 600
@@ -956,7 +956,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/dummy_regressor.png', width=600)"
+    "Image(filename='images/dummy_regressor.png', width=600)"
    ]
   },
   {
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1019,7 +1019,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/ols_linear_regression_description.png', width=900)"
+    "Image(filename='images/ols_linear_regression_description.png', width=900)"
    ]
   },
   {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "width": 250
@@ -1197,12 +1197,12 @@
     }
    ],
    "source": [
-    "Image(filename='../images/def_r2.png', width=250)"
+    "Image(filename='images/def_r2.png', width=250)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {
       "image/png": {
        "width": 300
@@ -1222,7 +1222,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/def_mse.png', width=300)"
+    "Image(filename='images/def_mse.png', width=300)"
    ]
   },
   {
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1308,7 +1308,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/knn_regressor_description.png', width=900)"
+    "Image(filename='images/knn_regressor_description.png', width=900)"
    ]
   },
   {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1484,7 +1484,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/elastic_net_description.png', width=900)"
+    "Image(filename='images/elastic_net_description.png', width=900)"
    ]
   },
   {
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1630,12 +1630,12 @@
     }
    ],
    "source": [
-    "Image(filename='../images/svr_description.png', width=900)"
+    "Image(filename='images/svr_description.png', width=900)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1655,7 +1655,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/svr_linear_description.png', width=900)"
+    "Image(filename='images/svr_linear_description.png', width=900)"
    ]
   },
   {
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1790,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1800,7 +1800,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/random_forest_description.png', width=900)"
+    "Image(filename='images/random_forest_description.png', width=900)"
    ]
   },
   {
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {
       "image/png": {
        "width": 900
@@ -1946,7 +1946,7 @@
     }
    ],
    "source": [
-    "Image(filename='../images/random_forest_feature_importance.png', width=900)"
+    "Image(filename='images/random_forest_feature_importance.png', width=900)"
    ]
   },
   {
@@ -2274,7 +2274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2288,7 +2288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
