--- a/1_Introduction_to_Pandas.ipynb
+++ b/1_Introduction_to_Pandas.ipynb
@@ -5005,7 +5005,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unemployment_rate.to_csv('data/unemployment_missing.csv')"
+    "# In Google Colab\n",
+    "unemployment_rate.to_csv('/content/unemployment_missing.csv')\n",
+    "\n",
+    "# In GitHub repo and personal computer\n",
+    "# unemployment_rate.to_csv('data/unemployment_missing.csv')"
    ]
   },
   {
@@ -5033,7 +5037,11 @@
     }
    ],
    "source": [
-    "!head -5 data/unemployment_missing.csv"
+    "# In Google Colab\n",
+    "!head -5 /content/unemployment_missing.csv\n",
+    "\n",
+    "# In GitHub repo and personal computer\n",
+    "# !head -5 data/unemployment_missing.csv"
    ]
   },
   {
@@ -5049,7 +5057,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unemployment_rate.to_csv('data/unemployment_missing.csv', index=False, sep=',')"
+    "# In Google Colab\n",
+    "unemployment_rate.to_csv('/content/unemployment_missing.csv', index=False, sep=',')\n",
+    "\n",
+    "# In GitHub repo and personal computer\n",
+    "# unemployment_rate.to_csv('data/unemployment_missing.csv', index=False, sep=',')"
    ]
   },
   {
@@ -5070,7 +5082,11 @@
     }
    ],
    "source": [
-    "!head -5 data/unemployment_missing.csv"
+    "# In Google Colab\n",
+    "!head -5 /content/unemployment_missing.csv\n",
+    "\n",
+    "# In GitHub repo and personal computer\n",
+    "# !head -5 data/unemployment_missing.csv"
    ]
   },
   {
