--- a/2_Python_Data_Visualization.ipynb
+++ b/2_Python_Data_Visualization.ipynb
@@ -4224,7 +4224,12 @@
     "            kind='line',\n",
     "            facet_kws={'sharex':False},\n",
     "            data=per_continent_mean_gdp);\n",
-    "plt.savefig('images/facetgrid_graph.png')"
+    "\n",
+    "# In Google Colab\n",
+    "plt.savefig('/content/facetgrid_graph.png')\n",
+    "\n",
+    "# In GitHub repo and personal computer\n",
+    "# plt.savefig('images/facetgrid_graph.png')"
    ]
   },
   {
