--- a/4a_Python_ML_Classification.ipynb
+++ b/4a_Python_ML_Classification.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install matplotlib==3.5.2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
