--- a/4b_Python_ML_Regression.ipynb
+++ b/4b_Python_ML_Regression.ipynb
@@ -1827,11 +1827,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez('data/heart_preproc.npz', \n",
+    "# In Google Colab\n",
+    "np.savez('/content/heart_preproc.npz', \n",
     "         X_test=X_test, y_test=y_test, \n",
     "         X_train=X_train, y_train=y_train,\n",
     "         preprocessor=preprocessor, \n",
-    "         age_scaler=age_scaler)"
+    "         age_scaler=age_scaler)\n",
+    "\n",
+    "# In GitHub and personal computer\n",
+    "# np.savez('data/heart_preproc.npz', \n",
+    "#         X_test=X_test, y_test=y_test, \n",
+    "#         X_train=X_train, y_train=y_train,\n",
+    "#         preprocessor=preprocessor, \n",
+    "#         age_scaler=age_scaler)"
    ]
   },
   {
